Take generated sources to zero deprecation warnings.
The last 25 warnings were all in code the build writes, so they needed the generator
changed rather than the output. Two causes.

Eleven were boxing constructors in the argument marshalling JdbcProxyGenerator emits
for C3P0ProxyStatement's reflective operations. Every primitive emitter moves to
valueOf; boolean already did. These box arguments into an Object[] for a reflective
call, read back by value, so caching cannot matter here.

The other fourteen were the JDBC methods a proxy has no choice about implementing:
ResultSet's getUnicodeStream and two-argument getBigDecimal, CallableStatement's
getBigDecimal and setUnicodeStream, PreparedStatement's setUnicodeStream. There is
nothing to migrate to -- the proxy must implement whatever the interface declares --
so the generator now marks a generated method @Deprecated when the interface method
it implements is, which it learns by reflection. That is accurate rather than merely
quiet, and it covers both warnings each method produced: the declaration overriding a
deprecated method, and the delegating call to inner, since a use inside an entity
that is itself deprecated does not warn.

The hook is a generateFullDelegateMethod override on JdbcProxyGenerator itself rather
than on any one nested generator, so the connection proxies inherit it too.

Seven annotations are emitted, matching exactly the seven deprecated methods
reflection finds across the three interfaces, and no boxing constructors remain in
generated output.

The whole build is now at zero deprecation warnings, from 53. mill test green at 74
tests, and the full-stack statement-cache harness passes under -ea, which is the one
that drives the regenerated proxies through a real pool.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NVA7nzMULwfv5QjBBJdoay